# blacklist-ip-filter

./: .gitignore  Makefile  README.md  blacklist.txt  blipgrep.py  requirements.txt  setup.cfg
tests/: performance_tests.py  test_blipgrep.py
tests/fixtures/: fixture_bl.txt  test_blacklist.txt  test_blacklist_lite.txt
