[metadata]
name = blipgrep
provides = blipgrep
description = Blipgrep - filter out blacklisted IP addresses from an access log
url = https://github.com/zedr/blipgrep
download_url = https://github.com/zedr/blipgrep
author = Rigel Di Scala
author_email = zedr@zedr.com
keywords = python3, sql
license = BSD 3-clause
platforms = Linux
version = 0.0.1
project_urls =
    Docs = https://github.com/zedr/blipgrep/README.md
    Bugs = https://github.com/zedr/blipgrep/issues

license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Natural Language :: English
    License :: OSI Approved :: GNU General Public License (GPL)
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

[options]
#zip_safe = True
#include_package_data = True
python_requires = >=3.6
install_requires = pip
setup_requires = pip
py_modules =
    blipgrep

# [options.package_data]
# * = *.pxd, *.pyx, *.json, *.txt

# [options.exclude_package_data]
# ;* = *.c, *.so, *.js

[options.entry_points]
console_scripts =
    blipgrep = blipgrep:main
#     bar = other_module:some_func
# gui_scripts =
#     baz = my_package_gui:start_func

[options.packages.find]
# include = *.py, *.pyw
# exclude = *.c, *.so, *.js, *.tests, *.tests.*, tests.*, tests
